<resources>
    <string name="app_name">Simone</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_single_player_prototype">SinglePlayerPrototype</string>
    <string name="facebook_app_id">109981342949411</string>
    <string name="fb_login_protocol_scheme">fb109981342949411</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling_db">ScrollingActivityDB</string>
    <string name="center_button_default_text">simone</string>
    <string name="vs_cpu">vs\ncpu</string>
    <string name="settings">settings</string>
    <string name="highscore">score\nboard</string>
    <string name="tap_to_begin">tap to\nbegin</string>
    <string name="classic_explanation">repeat\nsimone\'s\nsequence</string>
    <string name="hard_explanation">+\ncolor\nswap</string>
    <string name="classic">classic</string>
    <string name="hard">hard</string>
    <string name="leaderboard">leader\nboard</string>
    <string name="achievements">achieve\nments</string>
    <string name="scoreboard_long">scoreboard</string>
    <string name="instant">instant</string>
    <string name="nearby">nearby</string>
    <string name="multiplayer">Multi\nplayer</string>
    <string name="multiplayer_full">Multiplayer</string>
    <string name="multiplayer">Multi\nplayer</string>
    <string name="button">Button</string>

    <!-- Strings related to settings activity -->
    <string name="music">Music</string>
    <string name="notification">Notification</string>
    <string name="music_on">On</string>
    <string name="notification_on">On</string>
    <string name="waiting_for_your_color">waiting for your color...</string>
    <string name="type_your_player_id_here">Type your player id here</string>
    <string name="sign_in">Sign In</string>
    <string name="your_info">Your Info</string>
    <string name="multiplayer_nwith_facebook">Multiplayer. With Facebook.</string>
    <string name="to_try_multiplayer_you_need_to_sell_your_soul_and_your_data_to_mark_zuckerberg_njust_kidding_you_ll_just_sell_your_soul">To try Multiplayer, you need to sell your soul and your data to Mark Zuckerberg. Just kidding, you\'ll just sell your soul.</string>
    <string name="waiting_room">Waiting room</string>
    <string name="please_wait_here_while_the_other_players_accept_their_invites">Please wait here while the other players accept their invites.</string>
    <string name="id_of_this_match">ID of this match:</string>
    <string name="loading">Loading...</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="score">Score:</string>
    <string name="_10">10</string>
    <string name="score_">Score:</string>
    <string name="_5">5</string>
    <string name="play">Play</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="settings_uc">Settings</string>

</resources>
