<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.simone.multiplayer.view.MultiplayerTypeActivity">

    <LinearLayout
        android:id="@+id/multiplayer_fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/multiplayer_top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/multiplayer_top_left_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/myGreen"
                android:orientation="vertical">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/multiplayer_top_right_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/myRed"
                android:orientation="vertical">


            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/multiplayer_bottomlayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:background="@color/myYellow"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/multiplayer_bottom_left_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/myGreen"
                android:orientation="vertical">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/multiplayer_bottom_right_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/myRed"
                android:orientation="vertical">


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/multiplayer_fab_instant"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/myLightGray"
        app:layout_anchor="@id/multiplayer_top_layout"
        app:layout_anchorGravity="center" />

    <app.simone.shared.styleable.SimoneTextView
        android:id="@+id/multiplayer_textview_instant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:text="@string/instant"
        android:textColor="@color/myDarkGray"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_anchor="@id/multiplayer_top_layout"
        app:layout_anchorGravity="center" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/multiplayer_fab_nearby"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/myLightGray"
        app:layout_anchor="@id/multiplayer_bottomlayout"
        app:layout_anchorGravity="center" />

    <app.simone.shared.styleable.SimoneTextView
        android:id="@+id/multiplayer_textview_nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:text="@string/nearby"
        android:textColor="@color/myDarkGray"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_anchor="@id/multiplayer_bottomlayout"
        app:layout_anchorGravity="center" />

    <app.simone.shared.styleable.MainTextView

        android:id="@+id/multiplayer_textview_multiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:alpha="0.6"
        android:text="@string/multiplayer_full"
        android:textColor="#FFF"
        android:textSize="32sp"
        app:layout_anchor="@id/multiplayer_top_layout"
        app:layout_anchorGravity="bottom|center" />


</android.support.design.widget.CoordinatorLayout>
